fixed issue with team node image overflow and another with taxonomy layout

--- a/sites/all/themes/moo/assets/scss/isotope.scss
+++ b/sites/all/themes/moo/assets/scss/isotope.scss
@@ -87,7 +87,7 @@
     padding: 0 7px;
     @include media($tablet) {
       font-size: .9em;
-      margin: 0 12px 0 0;
+      margin: 0 12px 10px 0;
       padding: 2px 12px;
     }
     background-color: #949494;
