--- a/sites/all/themes/moo/assets/scss/style.scss
+++ b/sites/all/themes/moo/assets/scss/style.scss
@@ -297,6 +297,9 @@ header {
 }
 
 /* Team Node */
+article.node-team {
+    overflow: hidden;
+}
 .node-type-team .post-content {
   margin: 6% 4%;
   @include media($tablet) {
